Initial Set Up, Design, Display, and Selenium Test Complete